--- a/ticket-tracker/src/App.scss
+++ b/ticket-tracker/src/App.scss
@@ -3,10 +3,12 @@
 
   h2 {
     font-size: 1.5em;
+    height: 4vh;
   }
 
   h3 {
     font-size: 1em;
+    height: 3vh;
   }
 }
 
@@ -18,6 +20,15 @@
       flex-wrap: nowrap;
       justify-content: flex-start;
       align-items: center;
+    }
+
+    &__search {
+      text-align: center;
+      padding-bottom: 2rem;
+      
+      &--box {
+        padding-top: 2rem;
+      }
     }
   }
 }
