Added scss elements for styling

--- a/ticket-tracker/src/Components/Counter/Counter.scss
+++ b/ticket-tracker/src/Components/Counter/Counter.scss
@@ -4,14 +4,17 @@
 .counter {
   &__container {
     padding-top: 1rem;
+    background-color: #ff8e3c;
   }
 
   &__header {
     padding-bottom: 1rem;
+    background-color: #ff8e3c;
   }
 
   &__display {
     padding-bottom: 1rem;
+    background-color: #ff8e3c;
   }
 }
 
