--- a/ticket-tracker/src/Components/User/User.scss
+++ b/ticket-tracker/src/Components/User/User.scss
@@ -4,17 +4,24 @@
     text-align: center;
     padding-top: 1rem;
     margin-bottom: 3rem;
+    background-color: #ff8e3c;
+    color:#0d0d0d;
 
     &__details {
         margin-bottom: 3rem;
+        background-color: #ff8e3c;
+        
     }
 
     &__name {
         padding: 1rem;
+        background-color: #ff8e3c;
+
     }
 
     &__role {
         padding: 1rem;
+        background-color: #ff8e3c;
     }
    
 
