--- a/ticket-tracker/src/App.scss
+++ b/ticket-tracker/src/App.scss
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  background-color:#eff0f3;
 
   h2 {
     font-size: 1.5em;
@@ -28,6 +29,7 @@
       
       &--box {
         padding-top: 2rem;
+        
       }
     }
   }
