--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,7 @@
       flex-wrap: nowrap;
       justify-content: flex-start;
       align-items: center;
+      background-color: #eff0f3;
     }
 
     &__search {
