--- a/src/Components/Counter/Counter.scss
+++ b/src/Components/Counter/Counter.scss
@@ -16,6 +16,13 @@
     padding-bottom: 1rem;
     background-color: #ff8e3c;
   }
+
+  &__buttons {
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+
+  }
+  
 }
 
 
